--- a/index.html
+++ b/index.html
@@ -4,36 +4,48 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Miami Paradise Studio | AI-Powered Game Innovation Lab</title>
+  <title>Miami Paradise Studio | AI-Powered Game Innovation Lab | MVE Framework</title>
 
-  <!-- Meta tagi dla SEO i udostępniania -->
+  <!-- Optimized Meta tags for SEO and social sharing -->
   <meta name="description"
-    content="Miami Paradise Studio: AI-accelerated game lab building hits, not misses. We use rapid MVE cycles & data to validate ideas and de-risk investment." />
+    content="Miami Paradise Studio transforms game creation with 4-week MVE cycles, AI acceleration, and data validation. We build hit games without the guesswork—from South Beach vibes to market-validated entertainment." />
   <meta name="keywords"
-    content="Miami Paradise Studio, AI games, indie game dev, MVE, lean startup for games, agile production, game validation, scalable prototypes, creative reuse, data-driven games, game IP" />
+    content="game studio, AI game development, MVE framework, rapid game prototyping, Miami tech, indie games, data-driven game design, game validation, lean game production, 4-week development cycles" />
+  <link rel="canonical" href="https://miamiparadise.studio" />
+
+  <!-- Open Graph Meta Tags -->
   <meta property="og:title" content="Miami Paradise Studio | AI-Powered Game Innovation Lab" />
   <meta property="og:description"
-    content="Miami Paradise Studio uses 4-week MVE sprints, AI smarts, and real player data to find and scale hit games. Less guesswork, more impact." />
-  <meta property="og:image" content="assets/images/logo.webp" />
+    content="We blend Miami vibes with serious innovation. Our secret sauce: 4-week MVE cycles, AI-powered production, and data validation that turns promising concepts into scalable hits." />
+  <meta property="og:image" content="https://miamiparadise.studio/images/logo.webp" />
   <meta property="og:url" content="https://miamiparadise.studio" />
   <meta property="og:type" content="website" />
+  <meta property="og:site_name" content="Miami Paradise Studio" />
+  <meta property="og:locale" content="en_US" />
 
+  <!-- Twitter Card Meta Tags -->
   <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:site" content="@MiamiParadiseStudio" />
   <meta name="twitter:title" content="Miami Paradise Studio | AI-Powered Game Innovation Lab" />
   <meta name="twitter:description"
-    content="Building game prototypes in 4 weeks? Check. Using AI & data to pick winners? Check. Making game dev smarter & more capital-efficient? That's Miami Paradise Studio." />
-  <meta name="twitter:image" content="assets/images/logo.webp" />
+    content="The Miami-inspired game studio reinventing how hits are made. Equal parts AI acceleration, 4-week validation cycles, and data-driven scaling. Less risk, more paradise." />
+  <meta name="twitter:image" content="https://miamiparadise.studio/images/logo.webp" />
 
-  <link rel="icon" href="assets/images/logo.webp" type="image/webp" />
+  <!-- Fixed favicon and web app manifest paths -->
+  <link rel="apple-touch-icon" sizes="180x180" href="/assets/images/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/assets/images/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
+  <link rel="icon" href="/assets/images/logo.webp" type="image/webp">
+  <meta name="theme-color" content="#06020A">
 
-  <!-- Prefetch zasobów -->
+  <!-- Prefetch zasobów - fixed crossorigin issue -->
   <link rel="preload" href="assets/css/style.css" as="style" />
   <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" as="style"
-    crossorigin="anonymous" referrerpolicy="no-referrer" />
+    crossorigin="anonymous" />
 
   <!-- Style -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
-    integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="assets/css/style.css" />
 
@@ -52,7 +64,8 @@
   <header class="site-header">
     <div class="logo-container">
       <a href="#" class="logo-link" aria-label="Go to top of page">
-        <img src="assets/images/logo.webp" alt="Miami Paradise Studio Logo" class="header-logo" loading="lazy" />
+        <img src="/assets/images/android-chrome-192x192.png" alt="Miami Paradise Studio Logo" class="header-logo"
+          loading="lazy" />
         <span class="site-title gradient-text-miami">Miami Paradise Studio</span>
       </a>
     </div>
