feat: mention SHARD Protocol and add scroll reveal

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Miami Paradise Studio | De-Risking Game Investments, Engineering Certainty</title>
 
   <meta name="description"
-    content="We replace high-risk game investment gambles with engineered market certainty. Our rigorous 8-week Lean MVE engine delivers validated proof of concept, minimizing capital burn and maximizing ROI potential. Invest in data, not hope." />
+    content="We replace high-risk game investment gambles with engineered market certainty. Our rigorous 8-week Lean MVE engine delivers validated proof of concept, minimizing capital burn and maximizing ROI potential. Invest in data, not hope. Our team is also developing SHARD Protocol, a 4v4 cyberpunk capture-the-flag title enhanced by voice commands." />
   <meta name="keywords"
     content="investable games, game market validation, risk mitigation, game investment, data-driven game development, MVE framework, lean gamedev engine, market certainty, validated learning, game ROI, AI game studio, Miami Paradise Studio" />
   <link rel="canonical" href="https://miamiparadise.studio" />
