Add rain overlay and feature grid for SHARD Protocol

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 
 <body>
   <div id="tsparticles" aria-hidden="true"></div>
+  <div class="rain-layer" aria-hidden="true"></div>
   <header class="site-header">
     <a href="/" class="logo-link" aria-label="Miami Paradise Studio Home">
       <img src="/assets/images/android-chrome-192x192.png" alt="Miami Paradise Studio Logo" class="header-logo" width="42"
@@ -78,6 +79,29 @@
           <span class="text-aqua">SHIELD</span>, <span class="text-persian-rose">OVERLOAD</span> lub
           <span class="text-veronica">HACK</span> swoim głosem.</p>
         <a href="#beta" class="btn"><span>Dołącz do bety</span></a>
+      </div>
+    </section>
+
+    <section id="features" class="section-glass section features-section" aria-labelledby="features-heading">
+      <div class="section-accent" aria-hidden="true"></div>
+      <h2 id="features-heading" class="section-title gradient-text-miami">Cechy gry</h2>
+      <div class="feature-grid">
+        <article class="feature-item">
+          <h3 class="feature-title text-aqua">Neonowe areny</h3>
+          <p class="text-medium">Walcz w zalanych deszczem ulicach Miami Vice, gdzie mrok miesza się z neonem.</p>
+        </article>
+        <article class="feature-item">
+          <h3 class="feature-title text-persian-rose">Dynamiczna pogoda</h3>
+          <p class="text-medium">Mgła, deszcz i nocne burze zmieniają pole bitwy z każdą rundą.</p>
+        </article>
+        <article class="feature-item">
+          <h3 class="feature-title text-veronica">Głosowe umiejętności</h3>
+          <p class="text-medium">Aktywuj SHIELD lub OVERLOAD swoim głosem i zaskocz przeciwnika.</p>
+        </article>
+        <article class="feature-item">
+          <h3 class="feature-title text-aureolin">Capture the Flag</h3>
+          <p class="text-medium">Klasyczne przejmowanie flagi w nowoczesnym cyberpunkowym wydaniu.</p>
+        </article>
       </div>
     </section>
 
