feat: add glitch hero and interactive feature tilt

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
   <main id="main-content" class="main-content container">
     <section class="hero-section" aria-labelledby="hero-heading">
       <div class="hero-content">
-        <h1 id="hero-heading" class="hero-heading gradient-text-miami">SHARD Protocol</h1>
+        <h1 id="hero-heading" class="hero-heading gradient-text-miami glitch" data-text="SHARD Protocol">SHARD Protocol</h1>
         <p class="desc-text text-medium">Wejdź do neonowego świata 4v4 capture‑the‑flag. W deszczu, mgle i synthwave aktywuj
           <span class="text-aqua">SHIELD</span>, <span class="text-persian-rose">OVERLOAD</span> lub
           <span class="text-veronica">HACK</span> swoim głosem.</p>
