Polish website design: Coming Soon states, professional disabled UI, enhanced styling
- Replaced all specific game details with Coming Soon states
- Added professional disabled button and link styling
- Removed concrete voice commands, replaced with general descriptions
- Blocked all social links, contact forms, and external actions
- Enhanced CSS with glass morphism and gradient animations
- Added Coming Soon overlay replacing game preview mockup
- Updated SHARD Protocol page with development-focused messaging
- Improved accessibility with proper disabled states
- Enhanced particle effects and background gradients
- Professional color palette with cyberpunk aesthetic maintained

--- a/index.html
+++ b/index.html
@@ -115,9 +115,9 @@
         <div class="hero-visual" aria-hidden="true">
           <div class="shard-preview">
             <div class="preview-screen">
-              <div class="hud-overlay">
-                <div class="voice-indicator">SHIELD</div>
-                <div class="objective-marker">FLAG CAPTURED</div>
+              <div class="coming-soon-overlay">
+                <div class="coming-soon-text">Coming Soon</div>
+                <div class="development-status">In Development</div>
               </div>
             </div>
           </div>
@@ -143,8 +143,8 @@
             </div>
             <h3 class="feature-title">Voice Commands</h3>
             <p class="feature-desc">
-              SHIELD (cover), LOCAL (ping enemies), AIRSTRIKE (mark target), OVERDRIVE (speed boost), SHOCKWAVE (EMP
-              silence)
+              Revolutionary voice-controlled gameplay where your commands directly impact game mechanics and visual
+              feedback systems.
             </p>
           </div>
 
@@ -162,20 +162,22 @@
             <div class="feature-icon">
               <i class="fas fa-users" aria-hidden="true"></i>
             </div>
-            <h3 class="feature-title">Class System</h3>
+            <h3 class="feature-title">Dynamic Classes</h3>
             <p class="feature-desc">
-              Light (mobility), Medium (balance), Heavy (area control). 3 weapons + 1 special ability each.
+              Multiple specialized roles with unique abilities and playstyles. Each class offers distinct tactical
+              advantages.
             </p>
           </div>
         </div>
 
         <div class="shard-actions">
-          <a href="#" class="btn btn-primary">
-            <i class="fas fa-heart" aria-hidden="true"></i>
-            <span>Wishlist on Steam</span>
+          <a href="#" class="btn btn-primary btn-disabled">
+            <i class="fas fa-clock" aria-hidden="true"></i>
+            <span>Steam Page Coming Soon</span>
           </a>
-          <a href="#" class="btn btn-secondary">
-            <span>Playtest Sign-up</span>
+          <a href="#join" class="btn btn-secondary">
+            <i class="fab fa-discord" aria-hidden="true"></i>
+            <span>Join Discord</span>
           </a>
         </div>
       </div>
@@ -301,13 +303,13 @@
         </div>
 
         <div class="roadmap-links">
-          <a href="#" class="btn btn-secondary">
+          <a href="#" class="btn btn-secondary btn-disabled">
             <i class="fas fa-list" aria-hidden="true"></i>
-            <span>View Changelog</span>
+            <span>Changelog Coming Soon</span>
           </a>
-          <a href="#" class="btn btn-secondary">
+          <a href="#" class="btn btn-secondary btn-disabled">
             <i class="fas fa-bug" aria-hidden="true"></i>
-            <span>Report Issues</span>
+            <span>Issue Tracker Coming Soon</span>
           </a>
         </div>
       </div>
@@ -350,17 +352,17 @@
         </div>
 
         <div class="contact-actions">
-          <a href="mailto:investors@miamiparadise.studio" class="btn btn-primary">
+          <a href="#" class="btn btn-primary btn-disabled">
             <i class="fas fa-envelope" aria-hidden="true"></i>
-            <span>Contact Us</span>
+            <span>Contact Coming Soon</span>
           </a>
-          <a href="#" class="btn btn-secondary">
+          <a href="#" class="btn btn-secondary btn-disabled">
             <i class="fas fa-file-pdf" aria-hidden="true"></i>
-            <span>Download Deck</span>
+            <span>Deck Coming Soon</span>
           </a>
-          <a href="#" class="btn btn-secondary">
+          <a href="#" class="btn btn-secondary btn-disabled">
             <i class="fas fa-images" aria-hidden="true"></i>
-            <span>Press Kit</span>
+            <span>Press Kit Coming Soon</span>
           </a>
         </div>
       </div>
@@ -377,31 +379,31 @@
         </div>
 
         <div class="join-options">
-          <a href="#" class="join-card discord-card">
+          <a href="#" class="join-card discord-card disabled-card">
             <div class="join-icon">
               <i class="fab fa-discord" aria-hidden="true"></i>
             </div>
             <h3 class="join-title">Discord Community</h3>
-            <p class="join-desc">Daily updates, playtests, direct dev feedback</p>
-            <span class="join-cta">Join Server</span>
+            <p class="join-desc">Community server launching with Alpha release</p>
+            <span class="join-cta">Coming Soon</span>
           </a>
 
-          <a href="#" class="join-card newsletter-card">
+          <a href="#" class="join-card newsletter-card disabled-card">
             <div class="join-icon">
               <i class="fas fa-envelope" aria-hidden="true"></i>
             </div>
-            <h3 class="join-title">Development Newsletter</h3>
-            <p class="join-desc">Weekly progress, metrics, behind-the-scenes</p>
-            <span class="join-cta">Subscribe</span>
+            <h3 class="join-title">Development Updates</h3>
+            <p class="join-desc">Newsletter launching with Alpha milestone</p>
+            <span class="join-cta">Coming Soon</span>
           </a>
 
-          <a href="#" class="join-card playtest-card">
+          <a href="#" class="join-card alpha-card">
             <div class="join-icon">
-              <i class="fas fa-gamepad" aria-hidden="true"></i>
+              <i class="fas fa-rocket" aria-hidden="true"></i>
             </div>
-            <h3 class="join-title">Playtest Program</h3>
-            <p class="join-desc">First access to builds, shape the game</p>
-            <span class="join-cta">Sign Up</span>
+            <h3 class="join-title">Alpha Release</h3>
+            <p class="join-desc">First playable build with core mechanics</p>
+            <span class="join-cta">In Development</span>
           </a>
         </div>
       </div>
@@ -419,21 +421,21 @@
         </div>
 
         <div class="footer-links">
-          <a href="#" class="footer-link">Privacy Policy</a>
-          <a href="#" class="footer-link">Terms of Service</a>
-          <a href="mailto:contact@miamiparadise.studio" class="footer-link">Contact</a>
+          <span class="footer-link disabled-link">Privacy Policy (Coming Soon)</span>
+          <span class="footer-link disabled-link">Terms of Service (Coming Soon)</span>
+          <span class="footer-link disabled-link">Contact (Coming Soon)</span>
         </div>
 
         <div class="footer-social">
-          <a href="#" class="social-link" aria-label="Discord">
+          <span class="social-link disabled-link" aria-label="Discord Coming Soon">
             <i class="fab fa-discord" aria-hidden="true"></i>
-          </a>
-          <a href="#" class="social-link" aria-label="Twitter">
+          </span>
+          <span class="social-link disabled-link" aria-label="Twitter Coming Soon">
             <i class="fab fa-x-twitter" aria-hidden="true"></i>
-          </a>
-          <a href="#" class="social-link" aria-label="LinkedIn">
+          </span>
+          <span class="social-link disabled-link" aria-label="LinkedIn Coming Soon">
             <i class="fab fa-linkedin-in" aria-hidden="true"></i>
-          </a>
+          </span>
         </div>
       </div>
 
