--- a/shard-protocol.html
+++ b/shard-protocol.html
@@ -89,22 +89,22 @@
 							<span class="stat-label">Team Combat</span>
 						</div>
 						<div class="stat-item">
-							<span class="stat-number">5</span>
-							<span class="stat-label">Voice Commands</span>
+							<span class="stat-number">Voice</span>
+							<span class="stat-label">Command System</span>
 						</div>
 						<div class="stat-item">
-							<span class="stat-number">3</span>
-							<span class="stat-label">Combat Classes</span>
+							<span class="stat-number">Multi</span>
+							<span class="stat-label">Class System</span>
 						</div>
 					</div>
 
 					<div class="hero-actions">
-						<a href="#" class="btn btn-primary btn-large">
-							<i class="fab fa-steam" aria-hidden="true"></i>
-							<span>Wishlist on Steam</span>
+						<a href="#" class="btn btn-primary btn-large btn-disabled">
+							<i class="fas fa-clock" aria-hidden="true"></i>
+							<span>Steam Page Coming Soon</span>
 						</a>
 						<a href="#gameplay" class="btn btn-secondary">
-							<span>See Gameplay</span>
+							<span>See Development Progress</span>
 							<i class="fas fa-arrow-down" aria-hidden="true"></i>
 						</a>
 					</div>
@@ -124,54 +124,54 @@
 				</div>
 
 				<div class="voice-grid">
-					<div class="voice-command" data-command="shield">
+					<div class="voice-command" data-command="tactical">
 						<div class="command-icon">
 							<i class="fas fa-shield-alt" aria-hidden="true"></i>
 						</div>
-						<h3 class="command-name">SHIELD</h3>
-						<p class="command-desc">Deploy instant cover for your team. Block incoming fire and create
-							tactical advantages.</p>
-						<div class="command-cooldown">Cooldown: 15s</div>
+						<h3 class="command-name">Tactical Commands</h3>
+						<p class="command-desc">Voice-activated defensive abilities that create strategic advantages and
+							team coordination opportunities.</p>
+						<div class="command-cooldown">In Development</div>
 					</div>
 
-					<div class="voice-command" data-command="local">
+					<div class="voice-command" data-command="intel">
 						<div class="command-icon">
 							<i class="fas fa-crosshairs" aria-hidden="true"></i>
 						</div>
-						<h3 class="command-name">LOCAL</h3>
-						<p class="command-desc">Ping enemy locations for your team. Share intel instantly without
-							breaking focus.</p>
-						<div class="command-cooldown">Cooldown: 3s</div>
+						<h3 class="command-name">Intel System</h3>
+						<p class="command-desc">Voice-driven information sharing that enhances team awareness and
+							battlefield intelligence.</p>
+						<div class="command-cooldown">In Development</div>
 					</div>
 
-					<div class="voice-command" data-command="airstrike">
+					<div class="voice-command" data-command="offensive">
 						<div class="command-icon">
 							<i class="fas fa-bomb" aria-hidden="true"></i>
 						</div>
-						<h3 class="command-name">AIRSTRIKE</h3>
-						<p class="command-desc">Mark targets for orbital bombardment. Clear entrenched positions and
-							control zones.</p>
-						<div class="command-cooldown">Cooldown: 45s</div>
+						<h3 class="command-name">Offensive Actions</h3>
+						<p class="command-desc">Voice-controlled attack systems that amplify combat effectiveness and
+							area control.</p>
+						<div class="command-cooldown">In Development</div>
 					</div>
 
-					<div class="voice-command" data-command="overdrive">
+					<div class="voice-command" data-command="mobility">
 						<div class="command-icon">
 							<i class="fas fa-bolt" aria-hidden="true"></i>
 						</div>
-						<h3 class="command-name">OVERDRIVE</h3>
-						<p class="command-desc">Temporary speed boost for rapid repositioning. Escape danger or close
-							distance fast.</p>
-						<div class="command-cooldown">Cooldown: 30s</div>
+						<h3 class="command-name">Mobility Enhancement</h3>
+						<p class="command-desc">Voice-activated movement systems for dynamic positioning and tactical
+							repositioning.</p>
+						<div class="command-cooldown">In Development</div>
 					</div>
 
 					<div class="voice-command" data-command="shockwave">
 						<div class="command-icon">
 							<i class="fas fa-wifi" aria-hidden="true"></i>
 						</div>
-						<h3 class="command-name">SHOCKWAVE</h3>
-						<p class="command-desc">EMP blast that disables enemy voice commands. Force proximity chat only
-							- chaos ensues.</p>
-						<div class="command-cooldown">Cooldown: 60s</div>
+						<h3 class="command-name">Disruption Systems</h3>
+						<p class="command-desc">Voice-controlled interference abilities that alter enemy capabilities
+							and communication.</p>
+						<div class="command-cooldown">In Development</div>
 					</div>
 				</div>
 			</div>
@@ -326,23 +326,24 @@
 		<section class="cta-section" aria-labelledby="cta-title">
 			<div class="container">
 				<div class="cta-content">
-					<h2 id="cta-title" class="cta-title">Ready to Command?</h2>
+					<h2 id="cta-title" class="cta-title">Development in Progress</h2>
 					<p class="cta-subtitle">
-						Join the playtest program and help shape SHARD Protocol. Your feedback drives development.
+						SHARD Protocol is in active development. Follow our progress and be the first to know when Alpha
+						launches.
 					</p>
 
 					<div class="cta-actions">
-						<a href="#" class="btn btn-primary btn-large">
-							<i class="fab fa-steam" aria-hidden="true"></i>
-							<span>Wishlist on Steam</span>
+						<a href="#" class="btn btn-primary btn-large btn-disabled">
+							<i class="fas fa-clock" aria-hidden="true"></i>
+							<span>Steam Page Coming Soon</span>
 						</a>
-						<a href="#" class="btn btn-secondary btn-large">
+						<a href="#" class="btn btn-secondary btn-large btn-disabled">
 							<i class="fas fa-gamepad" aria-hidden="true"></i>
-							<span>Join Playtest</span>
+							<span>Alpha Coming Soon</span>
 						</a>
-						<a href="#" class="btn btn-secondary btn-large">
+						<a href="#" class="btn btn-secondary btn-large btn-disabled">
 							<i class="fab fa-discord" aria-hidden="true"></i>
-							<span>Discord Community</span>
+							<span>Discord Coming Soon</span>
 						</a>
 					</div>
 				</div>
@@ -362,21 +363,21 @@
 
 				<div class="footer-links">
 					<a href="/" class="footer-link">Home</a>
-					<a href="#" class="footer-link">Privacy Policy</a>
-					<a href="#" class="footer-link">Terms of Service</a>
-					<a href="mailto:contact@miamiparadise.studio" class="footer-link">Contact</a>
+					<span class="footer-link disabled-link">Privacy Policy (Coming Soon)</span>
+					<span class="footer-link disabled-link">Terms of Service (Coming Soon)</span>
+					<span class="footer-link disabled-link">Contact (Coming Soon)</span>
 				</div>
 
 				<div class="footer-social">
-					<a href="#" class="social-link" aria-label="Discord">
+					<span class="social-link disabled-link" aria-label="Discord Coming Soon">
 						<i class="fab fa-discord" aria-hidden="true"></i>
-					</a>
-					<a href="#" class="social-link" aria-label="Steam">
+					</span>
+					<span class="social-link disabled-link" aria-label="Steam Coming Soon">
 						<i class="fab fa-steam" aria-hidden="true"></i>
-					</a>
-					<a href="#" class="social-link" aria-label="Twitter">
+					</span>
+					<span class="social-link disabled-link" aria-label="Twitter Coming Soon">
 						<i class="fab fa-x-twitter" aria-hidden="true"></i>
-					</a>
+					</span>
 				</div>
 			</div>
 
