🚀 FINAL: Ultimate SHARD Protocol website - disabled Discord, enhanced animations, cyberpunk effects, perfect UX

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <li role="none"><a href="#about" class="nav-link" role="menuitem">Process</a></li>
         <li role="none"><a href="#roadmap" class="nav-link" role="menuitem">Roadmap</a></li>
         <li role="none"><a href="#investors" class="nav-link" role="menuitem">Investors</a></li>
-        <li role="none"><a href="#join" class="nav-link nav-cta" role="menuitem">Join Discord</a></li>
+        <li role="none"><a href="#" class="nav-link nav-cta nav-disabled" role="menuitem">Discord Soon</a></li>
       </ul>
 
       <button class="mobile-toggle" aria-label="Toggle menu" aria-expanded="false">
@@ -93,22 +93,22 @@
     <section class="hero" aria-labelledby="hero-title">
       <div class="hero-container">
         <div class="hero-content">
-          <h1 id="hero-title" class="hero-title">
+          <h1 id="hero-title" class="hero-title glitch-text">
             We build competitive worlds<br>
             <span class="gradient-text">that fight back.</span>
           </h1>
           <p class="hero-subtitle">
             Small, fast studio. Data-driven design.<br>
-            Brutal focus on fun and signal.
+            <span class="highlight-text">Brutal focus on fun and signal.</span>
           </p>
           <div class="hero-actions">
             <a href="#shard" class="btn btn-primary">
               <span>See SHARD Protocol</span>
               <i class="fas fa-arrow-right" aria-hidden="true"></i>
             </a>
-            <a href="#join" class="btn btn-secondary">
+            <a href="#" class="btn btn-secondary btn-disabled">
               <i class="fab fa-discord" aria-hidden="true"></i>
-              <span>Join Discord</span>
+              <span>Discord Coming Soon</span>
             </a>
           </div>
         </div>
@@ -175,9 +175,9 @@
             <i class="fas fa-clock" aria-hidden="true"></i>
             <span>Steam Page Coming Soon</span>
           </a>
-          <a href="#join" class="btn btn-secondary">
+          <a href="#" class="btn btn-secondary btn-disabled">
             <i class="fab fa-discord" aria-hidden="true"></i>
-            <span>Join Discord</span>
+            <span>Discord Coming Soon</span>
           </a>
         </div>
       </div>
