🎯 Final UI polish - Clean design consistency
✨ Coming Soon Design:
- Unified clean overlay design
- Consistent card styling with proper borders
- Clean typography with aqua accent badges
- Removed blur effects for clarity

🗺️ Development Roadmap - Clear Status System:
- DONE (green) - Completed phases
- ACTIVE (aqua) - Currently in progress
- NEXT (gray) - Upcoming phases
- FUTURE (gray) - Long-term goals
- Clear visual hierarchy with hover effects
- Status badges positioned top-right

🎮 SHARD Protocol Icons:
- Simplified hover effects like Join the Fight
- No glowing circles, just subtle scale transform
- Consistent with overall design language

🔗 Footer Navigation:
- Social icons no longer turn into glowing circles
- Clean border-color change on hover
- Maintains icon visibility and readability

Perfect design consistency across all sections! 🚀

--- a/index.html
+++ b/index.html
@@ -243,8 +243,7 @@
         <div class="roadmap-timeline">
           <div class="roadmap-phase completed">
             <div class="phase-status">
-              <i class="fas fa-check-circle" aria-hidden="true"></i>
-              <span class="status-text">Done</span>
+              <span>DONE</span>
             </div>
             <div class="phase-content">
               <h3 class="phase-title">Discovery & Pre-Production</h3>
@@ -255,8 +254,7 @@
 
           <div class="roadmap-phase in-progress">
             <div class="phase-status">
-              <i class="fas fa-play-circle" aria-hidden="true"></i>
-              <span class="status-text">In Progress</span>
+              <span>ACTIVE</span>
             </div>
             <div class="phase-content">
               <h3 class="phase-title">Vertical Slice</h3>
@@ -267,8 +265,7 @@
 
           <div class="roadmap-phase">
             <div class="phase-status">
-              <i class="fas fa-clock" aria-hidden="true"></i>
-              <span class="status-text">Not Started</span>
+              <span>NEXT</span>
             </div>
             <div class="phase-content">
               <h3 class="phase-title">Alpha</h3>
@@ -279,8 +276,7 @@
 
           <div class="roadmap-phase">
             <div class="phase-status">
-              <i class="fas fa-clock" aria-hidden="true"></i>
-              <span class="status-text">Not Started</span>
+              <span>NEXT</span>
             </div>
             <div class="phase-content">
               <h3 class="phase-title">Beta</h3>
@@ -291,8 +287,7 @@
 
           <div class="roadmap-phase">
             <div class="phase-status">
-              <i class="fas fa-rocket" aria-hidden="true"></i>
-              <span class="status-text">TBA</span>
+              <span>FUTURE</span>
             </div>
             <div class="phase-content">
               <h3 class="phase-title">Launch Window</h3>
